app/modules/common/header/defaultheader.scss
$cc-header---icon-padding: round(($cc-header---height * .15));
$cc-header---icon-height: round($cc-header---height * .43);
$cc-header---half-icon-height: round($cc-header---icon-height / 2);


.cc-header{
    background: $toolbar-background-color; 
    height: $cc-header---height;
    z-index: 999;
    width: 100%;
    position: relative;
    display: table;
    border-bottom: $border-bottom-width solid $toolbar-border-color;
}

.cc-supports-position-fixed{
    .cc-header{
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
    }
}

.cc-header__icon-wrapper{
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    //TODO: What is the magic 2 here?
    width: $cc-header---height + 2 + $half-primary-padding;
}

.cc-header__icon-wrapper--left{
    @extend .cc-header__icon-wrapper;

    text-align: left;
    padding-left: $half-primary-padding;
}

.cc-header__icon-wrapper--right{
    @extend .cc-header__icon-wrapper;

    text-align: right;
    padding-right: $half-primary-padding;
}

.cc-header__icon{
    text-shadow: 2px 2px 0px $toolbar-border-color;
    color: $toolbar-icon-color;

    display: inline-block;
    text-align: center; 

    padding: ($cc-header---icon-padding - 1) round($cc-header---icon-padding * 1.3) ($cc-header---icon-padding + 1);
    width: $cc-header---height;

    font-size: $cc-header---icon-height;

    border: 1px solid $toolbar-border-color;
    
    //android 2.3 needs blur for box shadow
    -webkit-box-shadow: 0 $border-bottom-width 1px 0 try-darker($toolbar-border-color, 5%);
    box-shadow: 0 $border-bottom-width 0 0 try-darker($toolbar-border-color, 5%);

    border-radius: $primary-border-radius;

    position: relative;

    @extend .cc-button--pressed;
}

//lots of hardcoded colors for the badge. Can we get rid of them?
.cc-header__icon-badge{
    position: absolute;
    font-size: $font-size-small;
    line-height: normal;
    min-width: 22px;
    text-align: center;
    background: #E07F73;
    color: #ffffff;
    border-radius: 15px;
    border-bottom: 3px solid #953D48;
    padding: 4px;
    text-shadow: none;
}

.cc-header__icon-badge--cart{
    @extend .cc-header__icon-badge;
    top: -8px;
    right: 2px;
}

.cc-header__logo{
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
    display: table-cell;

    background-image: $logo-small;

    @media (min-width:600px){
        background-image: $logo-big;
    }
}

